# sisyphus32

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: bit_move.rs  bit_twiddles.rs  bitboard.rs  board_state.rs  bot_game.rs  butterfly_heuristic.rs  castling_rights.rs  color.rs  consts.rs  ctor.rs  engine.rs  error.rs  eval.rs  eval_move.rs  eval_position.rs  features.rs  fen.rs  file.rs  global_thread_pool.rs  history_heuristic.rs  killer_moves.rs  lib.rs  macros.rs  magic_bitboards.rs  magic_numbers.rs  main.rs  move_flag.rs  move_gen.rs  move_generation.rs  move_init.rs  move_list.rs  move_masks.rs  opening_book.rs  perft.rs  piece.rs  position.rs  rank.rs  rng.rs  score.rs  search.rs  (+8 more)
tests/: integration_tests.rs
